# godri

./: .gitignore  CLAUDE.md  README.md  output.json  payload.json  pyproject.toml  test_form_api.py
e2e_tests/: test_cli_version_commands.py  test_version_management.py
src/godri/: __init__.py  main.py  main_old.py
src/godri/cli/: auth.py  docs.py  drive.py  mcp.py  translate.py
src/godri/commons/: __init__.py
src/godri/commons/api/: __init__.py  docs_api.py  drive_api.py  forms_api.py  google_api_client.py  sheets_api.py  slides_api.py  speech_api.py  translate_api.py
src/godri/commons/models/: __init__.py
src/godri/commons/utils/: cache.py  color_converter.py  file_helper.py  range_parser.py
src/godri/config/: logging_config.py
src/godri/e2e_tests/: test_drive_e2e.py  test_mcp_e2e.py
src/godri/mcpservers/: base_tools.py  docs_tools.py  drive_tools.py  forms_tools.py  main_server.py  sheets_tools.py  slides_tools.py  speech_tools.py  translate_tools.py
src/godri/services/: auth_service.py  auth_service_new.py  docs_service.py  drive_service.py  forms_service.py  mcp_server.py  sheets_service.py  slides_service.py  speech_service.py  translate_service.py
src/godri/utils/: __init__.py  language_mapper.py
